--- a/src/server/package.json
+++ b/src/server/package.json
@@ -13,8 +13,10 @@
   },
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
     "mariadb": "^2.0.0-alpha",
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
