--- a/src/client/package.json
+++ b/src/client/package.json
@@ -43,6 +43,7 @@
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-beta.13",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
+    "bootstrap": "^4.1.3",
     "cordova-android": "7.1.1",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
