--- a/src/client/package.json
+++ b/src/client/package.json
@@ -70,7 +70,7 @@
     "@types/node": "~10.12.0",
     "codelyzer": "~4.5.0",
     "cordova": "~8.1.2",
-    "electron": "~3.0.6",
+    "electron": "^3.0.14",
     "ionic": "~4.2.1",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
