--- a/src/client/package.json
+++ b/src/client/package.json
@@ -44,7 +44,7 @@
     "@ionic/angular": "4.0.0-beta.13",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "bootstrap": "^4.1.3",
-    "cordova-android": "7.1.1",
+    "cordova-android": "^7.1.4",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.3",
