--- a/src/client/package.json
+++ b/src/client/package.json
@@ -57,7 +57,7 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.10.0",
-    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular-devkit/build-angular": "^0.12.1",
     "@angular-devkit/core": "~7.0.3",
     "@angular-devkit/schematics": "~7.0.3",
     "@angular/cli": "~7.0.3",
